# observability-sdk

./: .gitignore  README.md  docker-compose.yml
docs/: Observability-stack-0602.md  document-generation-service-sdk-integration-guide.md  notification-platform-sdk-integration-guide.md  span-status-utilities.md
examples/: docker-compose.yml  test-elk.bat  test-elk.sh
examples/go-http-service/: .env  go.mod  go.sum  main.go
examples/go-http-service/observability/: observability.go
examples/grafana/provisioning/alerting/: alerting.yaml
examples/grafana/provisioning/dashboards/: dashboards.yaml
examples/grafana/provisioning/datasources/: datasources.yaml
examples/logstash/pipeline/: logstash.conf
examples/loki/: loki-config.yaml
examples/mimir/: mimir-config.yaml
examples/node-http-service/: .env.example  README.md
examples/node-http-service/src/: index.ts  observability.ts
examples/otel-collector/: agent-config.yaml  config.yaml
examples/prometheus/: prometheus.yml
examples/python-fastapi-service/: .env  Dockerfile  docker-compose.yaml  main.py
examples/python-fastapi-service/app/: __init__.py  observability.py
examples/tempo/: tempo-config.yaml
examples/vector/: vector-agent.yaml  vector.toml  vector.yaml
go-sdk/: README.md  go.mod  go.sum
go-sdk/pkg/observability/: observability.go
go-sdk/pkg/observability/logging/: checkpoint.go  config.go  file_writer.go  kafka_writer.go  (+3 more)
js-sdk/: README.md  tsup.config.ts
js-sdk/src/observability/: env.ts  index.ts
python-sdk/: README.md  pyproject.toml
python-sdk/observability/: __init__.py
python-sdk/observability/logging/: __init__.py  config.py  kafka_handler.py  logger.py  pii_redactor.py
python-sdk/observability/metrics/: __init__.py  middleware.py  pusher.py  registry.py
python-sdk/observability/tracing/: __init__.py  kafka_exporter.py  middleware.py  tracer.py
(+20 files in other folders)
